# Hermes-DCF-and-Stock-Screener

./: .env.example  .gitignore  config.yaml  pyproject.toml  run.py
.hermes/plans/: 2026-06-14_223900-stock-screener-mvp.md
data/: cache.py  ingest.py  universe.py  universe_fallback.json
screen/: factors.py  filters.py  hmm_detect.py  score.py  sector_percentiles.py  sentiment_score.py
tests/: test_cache.py  test_factors.py  test_filters.py  test_hmm_detect.py  test_ingest.py  test_prompt.py  test_schema.py  test_score.py  test_universe.py
thesis/: generate.py  prompt.py  schema.py  sentiment.py  sources.py
