[project]
name = "stock-screener"
version = "0.1.0"
description = "DCF valuation and stock screening pipeline with AI-generated analyst theses"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15",
    "pandas>=2.2",
    "requests>=2.32",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pydantic>=2.0",
    "anthropic>=0.30",
    "streamlit>=1.35",
    "notion-client>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "hmmlearn>=0.3",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["data*", "screen*", "thesis*", "out*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
